fix: table: adds default overflow back to latest scroll bars mixin (#678)

--- a/src/components/DateTimePicker/DatePicker/Styles/mixins.scss
+++ b/src/components/DateTimePicker/DatePicker/Styles/mixins.scss
@@ -57,6 +57,7 @@ $picker-input-padding-vertical: max(
 
 // Picker scroll bars
 @mixin scroll-bars() {
+  overflow: auto;
   -ms-overflow-style: none;
 
   &::-webkit-scrollbar {
